--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
     <title>Hello Rigo with Vanilla.js</title>
     <link
       rel="stylesheet"
@@ -14,11 +13,12 @@
   </head>
   <body>
     <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
+          <h1>OMG! you will not believe me but...</h1>
+          <h1 id="theexcuse"></h1>
+        <div id="excuse"></div>
+        <button id="boton">Generate a new excuse</button>
+
+    
       </p>
       <div class="fixed-bottom p-4">
         Made with ❤️ by
